No more Uuids, stick with hashes